--- a/html/template/head.html
+++ b/html/template/head.html
@@ -1,5 +1,5 @@
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>{title}</title>
     <link href="css/styles.css" rel="stylesheet">
 </head>
