--- a/_assets/scss/styles.scss
+++ b/_assets/scss/styles.scss
@@ -1,2 +1,7 @@
+@import "normalize";
+@import "variables";
+@import "fonts";
+@import "layaut";
 @import "base";
+@import "icons";
 @import "components/compile";
