--- a/_assets/scss/components/footer.scss
+++ b/_assets/scss/components/footer.scss
@@ -1,7 +1,33 @@
 .footer {
-  &__wrapper {
+  &__row {
     display: flex;
-    align-items: baseline;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 64px;
+    padding-bottom: 40px;
+  }
+
+  &__logo {
+    margin-bottom: 40px;
+  }
+
+  &__social {
+    margin-bottom: 40px;
+  }
+
+  @media screen and (min-width: $sm) {
+    &__row {
+      justify-content: space-between;
+      flex-direction: row;
+      padding-top: 36px;
+      padding-bottom: 51px;
+    }
+  }
+
+  @media screen and (min-width: $lg) {
+    &__row {
+      padding-top: 70px;
+      padding-bottom: 87px;
+    }
   }
 }
