--- a/_assets/scss/icons.scss
+++ b/_assets/scss/icons.scss
@@ -11,3 +11,31 @@
   height: 25px;
   width: 25px;
 }
+
+.i-youtube {
+  display: inline-block;
+  background-image: url("../img/icons/i_youtube.png");
+  height: 13px;
+  width: 15px;
+}
+
+.i-twitter {
+  display: inline-block;
+  background-image: url("../img/icons/i_twitter.png");
+  height: 14px;
+  width: 18px;
+}
+
+.i-facebook {
+  display: inline-block;
+  background-image: url("../img/icons/i_facebook.png");
+  height: 18px;
+  width: 9px;
+}
+
+.i-htmlacademy {
+  display: inline-block;
+  background-image: url("../img/icons/i_htmlacademy.png");
+  height: 34px;
+  width: 27px;
+}
