--- a/_assets/scss/components/get-app.scss
+++ b/_assets/scss/components/get-app.scss
@@ -1,3 +1,12 @@
 .get-app {
-    background-image: url("../img/top-image-xl.png");
+  border-color: #19222b;
+    background: url("../img/smart-hand-xl.png") center bottom no-repeat,
+                url("../img/top-image-xl.png") center bottom no-repeat;
+    background-size: auto auto, 100% auto;
+    height: 560px;
+  &__inner {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+  }
 }
