--- a/_assets/scss/components/header.scss
+++ b/_assets/scss/components/header.scss
@@ -1,7 +1,10 @@
 .header {
-  background-color: rgba(178, 178, 178, 0.302);
+  background-color: rgba(0, 0, 0, 0.302);
   height: 66px;
   line-height: 18px;
+  position: absolute;
+  right: 0;
+  left: 0;
 
   &__menu {
     @media screen and (min-width: $lg) {
@@ -20,7 +23,6 @@
     align-items: center;
   }
 }
-
 
 
 
