get-app-content

--- a/_assets/scss/components/compile.scss
+++ b/_assets/scss/components/compile.scss
@@ -1,6 +1,7 @@
 @import "header";
 @import "menu";
 @import "get-app";
+@import "app-price";
 @import "footer";
 @import "social";
 @import "copyright";
