--- a/_assets/scss/components/get-app.scss
+++ b/_assets/scss/components/get-app.scss
@@ -1,12 +1,125 @@
 .get-app {
-  border-color: #19222b;
-    background: url("../img/smart-hand-xl.png") center bottom no-repeat,
-                url("../img/top-image-xl.png") center bottom no-repeat;
-    background-size: auto auto, 100% auto;
-    height: 560px;
+  background-color: #19222b;
+  background: url("../img/smart-hand-xl.png") center bottom no-repeat,
+  url("../img/top-image-xl.png") center bottom no-repeat;
+  background-size: auto auto, 100% auto;
+  color: #ffffff;
+
   &__inner {
     display: flex;
+    width: 100%;
+
+    @media screen and (min-width: $sm) {
+      width: 300px;
+    }
+  }
+
+  &__content {
+    margin-top: 66px;
+    z-index: 1;
+    display: flex;
+    align-items: center;
     flex-direction: column;
-    justify-content: flex-end;
+    background-color: #1d2631;
+    margin-right: -20px;
+    margin-left: -20px;
+    width: calc(100% + 40px);
+
+    @media screen and (min-width: $sm) {
+      margin-top: 110px;
+      background-color: transparent;
+      width: 300px;
+      margin-right: 0;
+      margin-left: 0;
+    }
+  }
+
+    &__title {
+      display: none;
+
+      @media screen and (min-width: $sm) {
+        display: block;
+        text-align: center;
+        font-weight: 300;
+        padding-left: 28px;
+        padding-right: 28px;
+      }
+
+      @media (max-width: $lg) and (min-width: $sm)  {
+        margin-bottom: 30px;
+        font-size: 40px;
+        line-height: 48px;
+      }
+
+      @media screen and (min-width: $lg) {
+        margin-top: 108px;
+        margin-bottom: 52px;
+        font-size: 50px;
+        line-height: 60px;
+      }
+
+    }
+
+  &__btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 280px;
+    line-height: 18px;
+    color: #ffffff;
+    text-decoration: none;
+    font-weight: 700;
+    height: 55px;
+    border: 3px solid #ffffff;
+    border-radius: 27px;
+    cursor: pointer;
+    margin-bottom: 32px;
+
+    @media (min-width: $sm) and (max-width: $lg) {
+        font-size: 21px;
+        margin-bottom: 45px;
+    }
+
+    @media screen and (min-width: $lg) {
+        font-size: 21px;
+        margin-bottom: 67px;
+    }
+  }
+
+  &__icons {
+    list-style: none;
+    padding-left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+    margin-top: 0;
+    margin-bottom: 23px;
+
+    @media (min-width: $sm) and (max-width: $lg) {
+      margin-bottom: 35px;
+    }
+
+    @media screen and (min-width: $lg) {
+      margin-bottom: 55px;
+    }
+  }
+
+  &__icon {
+    margin-left: 18px;
+    margin-right: 18px;
+  }
+
+  &__text {
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: 300;
+    text-align: center;
+    width: 230px;
+
+    @media screen and (min-width: $lg) {
+        display: flex;
+        font-size: 18px;
+        width: 100%;
+    }
   }
 }
