--- a/_assets/scss/icons.scss
+++ b/_assets/scss/icons.scss
@@ -1,6 +1,7 @@
 .i-burger {
   display: inline-block;
   background-image: url("../img/icons/i_burger.png");
+  background-repeat: no-repeat;
   height: 25px;
   width: 50px;
 }
@@ -8,6 +9,7 @@
 .i-close {
   display: inline-block;
   background-image: url("../img/icons/i_close.png");
+  background-repeat: no-repeat;
   height: 25px;
   width: 25px;
 }
@@ -15,6 +17,7 @@
 .i-youtube {
   display: inline-block;
   background-image: url("../img/icons/i_youtube.png");
+  background-repeat: no-repeat;
   height: 13px;
   width: 15px;
 }
@@ -22,6 +25,7 @@
 .i-twitter {
   display: inline-block;
   background-image: url("../img/icons/i_twitter.png");
+  background-repeat: no-repeat;
   height: 14px;
   width: 18px;
 }
@@ -29,6 +33,7 @@
 .i-facebook {
   display: inline-block;
   background-image: url("../img/icons/i_facebook.png");
+  background-repeat: no-repeat;
   height: 18px;
   width: 9px;
 }
@@ -36,6 +41,31 @@
 .i-htmlacademy {
   display: inline-block;
   background-image: url("../img/icons/i_htmlacademy.png");
+  background-repeat: no-repeat;
   height: 34px;
   width: 27px;
+}
+
+.i-apple-logo {
+  display: inline-block;
+  background-image: url("../img/icons/i_apple-logo.png");
+  background-repeat: no-repeat;
+  height: 57px;
+  width: 48px;
+}
+
+.i-android-logo {
+  display: inline-block;
+  background-image: url("../img/icons/i_android-logo.png");
+  background-repeat: no-repeat;
+  height: 48px;
+  width: 43px;
+}
+
+.i-microsoft-logo {
+  display: inline-block;
+  background-image: url("../img/icons/i_microsoft-logo.png");
+  background-repeat: no-repeat;
+  height:41px;
+  width: 44px;
 }
