--- a/_assets/scss/components/compile.scss
+++ b/_assets/scss/components/compile.scss
@@ -2,6 +2,9 @@
 @import "menu";
 @import "get-app";
 @import "app-price";
+@import "app-description";
+@import "card";
+@import "box-info";
 @import "footer";
 @import "social";
 @import "copyright";
