--- a/_assets/scss/components/compile.scss
+++ b/_assets/scss/components/compile.scss
@@ -5,6 +5,7 @@
 @import "app-description";
 @import "card";
 @import "box-info";
+@import "app-contacts";
 @import "footer";
 @import "social";
 @import "copyright";
