--- a/_assets/scss/components/compile.scss
+++ b/_assets/scss/components/compile.scss
@@ -6,6 +6,7 @@
 @import "card";
 @import "box-info";
 @import "app-contacts";
+@import "map";
 @import "footer";
 @import "social";
 @import "copyright";
