--- a/_assets/scss/components/map.scss
+++ b/_assets/scss/components/map.scss
@@ -1,4 +1,5 @@
-#map {
+.map {
+  position: relative;
   width: 100%;
   height: 200px;
 
@@ -8,5 +9,26 @@
 
   @media screen and (min-width: $lg) {
     height: 500px;
+  }
+
+  &__decor {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 33px;
+    z-index: 1;
+  }
+}
+
+svg {
+  width: 100%;
+  height: 33px;
+
+  @media (max-width: $lg) and (min-width: $sm) {
+    height: 68px;
+  }
+
+  @media screen and (min-width: $lg) {
+    height: 100px;
   }
 }
