--- a/_assets/scss/components/copyright.scss
+++ b/_assets/scss/components/copyright.scss
@@ -1,9 +1,18 @@
 .copyright {
   line-height: 18px;
+  font-size: 14px;
   display: flex;
   align-items: center;
 
   &__text {
     margin-right: 15px;
+
+    @media screen and (min-width: $lg) {
+      font-size: 18px;
+    }
+  }
+
+  &__img {
+    margin-top: 6px;
   }
 }
