--- a/_assets/scss/components/box-info.scss
+++ b/_assets/scss/components/box-info.scss
@@ -1,11 +1,22 @@
 .box-info {
-  background-color: #f0f0f0;
+  display: none;
 
-  &__img {
-    display: none;
-    @media screen and (min-width: $sm) {
-      display: block;
+  @media screen and (min-width: $sm) {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 58px;
+    width: 620px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  @media screen and (min-width: $lg) {
+    padding-top: 0;
+    width: 100%;
+    &__img {
+      margin-left: 7px;
     }
   }
+
 
 }
