--- a/_assets/scss/components/app-description.scss
+++ b/_assets/scss/components/app-description.scss
@@ -1,6 +1,5 @@
 .app-description {
   padding-top: 40px;
-  background-color: #f0f0f0;
 
   @media (min-width: $sm) and (max-width: $lg)  {
     padding-top: 50px;
@@ -10,32 +9,28 @@
     padding-top: 67px;
   }
 
-
-  &__title {
+  &__container-title {
     margin-top: 0;
-    margin-bottom: 35px;
+    padding-bottom: 35px;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
     font-size: 24px;
     line-height: 30px;
     font-weight: 300;
-    width: 210px;
+    width: 100%;
 
     @media (min-width: $sm) and (max-width: $lg)  {
-      margin-bottom: 50px;
+      padding-bottom: 40px;
       font-size: 40px;
       line-height: 48px;
-      width: 583px;
     }
 
     @media screen and (min-width: $lg) {
-      margin-bottom: 75px;
+      padding-bottom: 75px;
       font-size: 50px;
       line-height: 60px;
-      width: 730px;
     }
-
   }
 
   &__paragraph-1 {
@@ -45,7 +40,6 @@
     @media screen and (min-width: $sm) {
       margin-bottom: 0;
     }
-
   }
 
   &__paragraph-2 {
@@ -54,13 +48,16 @@
   }
 
   &__cards {
+    background-color: #f0f0f0;
+  }
+
+  &__cards-inner {
     position: relative;
     padding-top: 46px;
     padding-bottom: 0;
 
     @media screen and (min-width: $sm) {
       padding-left: 295px;
-      padding-top: 36px;
       padding-bottom: 42px;
       width: 620px;
       min-height: 489px;
@@ -74,24 +71,27 @@
       padding-left: 0;
       padding-top: 0;
       padding-bottom: 67px;
-      margin-left: 0;
-      margin-right: 0;
       width: auto;
-      min-height: auto;
+      min-height: 100%;
     }
   }
 
   &__card {
+
     margin-top: 39px;
 
+
     @media screen and (min-width: $sm) {
+
       margin-top: 42px;
+
     }
+
 
     @media screen and (min-width: $lg) {
+
       margin-top: 0;
+
     }
-
   }
-
 }
