--- a/_assets/scss/components/box-info.scss
+++ b/_assets/scss/components/box-info.scss
@@ -2,21 +2,80 @@
   display: none;
 
   @media screen and (min-width: $sm) {
-    display: flex;
-    justify-content: space-between;
-    padding-top: 58px;
-    width: 620px;
-    margin-left: auto;
-    margin-right: auto;
+    display: block;
+    background-color: #ffffff;
   }
 
   @media screen and (min-width: $lg) {
-    padding-top: 0;
-    width: 100%;
-    &__img {
-      margin-left: 7px;
+    background-color: #f0f0f0;
+  }
+
+  &__container {
+
+    @media screen and (min-width: $sm) {
+      display: flex;
+      justify-content: space-between;
+      padding-top: 58px;
+      width: 620px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    @media screen and (min-width: $lg) {
+      padding-top: 0;
+      padding-bottom: 58px;
+      width: 100%;
     }
   }
 
+  &__content {
 
+    @media screen and (min-width: $sm) {
+      font-size: 14px;
+      line-height: 24px;
+      width: 335px;
+      padding-left: 12px;
+      padding-right: 12px;
+    }
+
+    @media screen and (min-width: $lg) {
+      font-size: 18px;
+      line-height: 30px;
+      padding-left: 70px;
+      padding-right: 20px;
+      width: auto;
+    }
+  }
+
+  &__title {
+
+    @media screen and (min-width: $sm) {
+      font-size: 30px;
+      line-height: 36px;
+      font-weight: 700;
+      margin-top: 37px;
+    }
+
+    @media screen and (min-width: $lg) {
+      line-height: 30px;
+      margin-top: 93px;
+      margin-bottom: 24px;
+    }
+  }
+
+  &__text {
+
+    @media (min-width: $sm) and (max-width: $lg) {
+
+    }
+
+    @media screen and (min-width: $lg) {
+      margin-bottom: 30px;
+    }
+  }
+
+  &__link {
+    display: inline-block;
+    color: #d22856;
+  }
 }
