--- a/_assets/scss/components/compile.scss
+++ b/_assets/scss/components/compile.scss
@@ -5,6 +5,9 @@
 @import "app-description";
 @import "card";
 @import "box-info";
+@import "app-reviews";
+@import "table";
+@import "slider";
 @import "app-contacts";
 @import "map";
 @import "footer";
