--- a/_assets/scss/components/box-info.scss
+++ b/_assets/scss/components/box-info.scss
@@ -10,12 +10,13 @@
     background-color: #f0f0f0;
   }
 
-  &__container {
+  &__inner {
 
     @media screen and (min-width: $sm) {
       display: flex;
       justify-content: space-between;
       padding-top: 58px;
+      padding-bottom: 58px;
       width: 620px;
       margin-left: auto;
       margin-right: auto;
@@ -23,7 +24,6 @@
 
     @media screen and (min-width: $lg) {
       padding-top: 0;
-      padding-bottom: 58px;
       width: 100%;
     }
   }
@@ -34,7 +34,7 @@
       font-size: 14px;
       line-height: 24px;
       width: 335px;
-      padding-left: 12px;
+      padding-left: 25px;
       padding-right: 12px;
     }
 
@@ -54,23 +54,27 @@
       line-height: 36px;
       font-weight: 700;
       margin-top: 37px;
+      padding-right: 105px;
     }
 
     @media screen and (min-width: $lg) {
       line-height: 30px;
       margin-top: 93px;
       margin-bottom: 24px;
+      padding-right: 0;
     }
   }
 
   &__text {
 
-    @media (min-width: $sm) and (max-width: $lg) {
-
+    @media screen and (min-width: $sm) {
+      margin-top: 10px;
+      margin-bottom: 10px;
     }
 
     @media screen and (min-width: $lg) {
       margin-bottom: 30px;
+      margin-top: 0;
     }
   }
 
