--- a/_assets/scss/components/app-price.scss
+++ b/_assets/scss/components/app-price.scss
@@ -1,3 +1,13 @@
 .app-price {
-  padding-top: 90px;
+
+  @media screen and (min-width: $sm) {
+    padding-top: 85px;
+    padding-bottom: 110px;
+  }
+
+  @media screen and (min-width: $lg) {
+    padding-top: 148px;
+    padding-bottom: 110px;
+  }
+
 }
