--- a/_assets/scss/components/slider.scss
+++ b/_assets/scss/components/slider.scss
@@ -26,6 +26,7 @@
 
   &__option {
     border-top: 2px solid #e8eaea;
+    background-color: #ffffff;
     padding-top: 14px;
     padding-bottom: 14px;
     padding-left: 22px;
