--- a/_assets/scss/components/app-price.scss
+++ b/_assets/scss/components/app-price.scss
@@ -1,4 +1,8 @@
 .app-price {
+    background-color: #f0f0f0;
+    padding-top: 90px;
+    padding-bottom: 100px;
+    position: relative;
 
   @media screen and (min-width: $sm) {
     padding-top: 85px;
@@ -8,6 +12,27 @@
   @media screen and (min-width: $lg) {
     padding-top: 148px;
     padding-bottom: 110px;
+  }
+
+  &:before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-top: -1px;
+    width: 100%;
+    height: 35px;
+    background-image: url("../img/background/background-section.svg");
+    background-repeat: no-repeat;
+
+    @media screen and (min-width: $sm)  {
+      height: 64px;
+    }
+
+    @media screen and (min-width: $lg) {
+      height: 95px;
+    }
   }
 
 }
