--- a/_assets/scss/components/map.scss
+++ b/_assets/scss/components/map.scss
@@ -11,24 +11,26 @@
     height: 500px;
   }
 
-  &__decor {
+  &:before {
+    content: "";
+    display: block;
     position: absolute;
     top: 0;
+    left: 0;
+    margin-top: -1px;
     width: 100%;
     height: 33px;
-    z-index: 1;
-  }
-}
+    background-image: url("../img/background/background-map.svg");
+    background-repeat: no-repeat;
+    z-index: 3;
 
-svg {
-  width: 100%;
-  height: 33px;
+    @media screen and (min-width: $sm) {
+      height: 68px;
+    }
 
-  @media (max-width: $lg) and (min-width: $sm) {
-    height: 68px;
+    @media screen and (min-width: $lg) {
+      height: 100px;
+    }
   }
 
-  @media screen and (min-width: $lg) {
-    height: 100px;
-  }
 }
