--- a/_assets/scss/components/app-contacts.scss
+++ b/_assets/scss/components/app-contacts.scss
@@ -38,7 +38,7 @@
       margin-bottom: 36px;
       width: 225px;
 
-      @media (max-width: $lg) and (min-width: $sm) {
+      @media screen and (min-width: $sm) {
         font-size: 40px;
         line-height: 45px;
         width: 370px;
@@ -77,12 +77,13 @@
       padding-left: 10px;
       margin-bottom: 20px;
 
-      @media (max-width: $lg) and (min-width: $sm) {
+      @media screen and (min-width: $sm) {
         width: 50%;
         margin-bottom: 50px;
       }
 
       @media screen and (min-width: $lg) {
+        width: auto;
         margin-bottom: 20px;
       }
 
@@ -97,6 +98,3 @@
     }
 
   }
-svg {
-
-}
