--- a/_assets/scss/components/table.scss
+++ b/_assets/scss/components/table.scss
@@ -18,17 +18,21 @@
       border: 2px solid #e8eaea;
       width: 25%;
       background-color: #ffffff;
+      padding-top: 7px;
       padding-left: 14px;
       padding-right: 14px;
       text-align: center;
-      vertical-align: center;
     }
 
     @media screen and (min-width: $lg) {
-      padding-top: 14px;
-      padding-bottom: 15px;
+      padding-top: 12px;
+      padding-bottom: 13px;
       padding-left: 21px;
       padding-right: 21px;
+    }
+
+    &:first-child {
+      text-align: left;
     }
 
   }
@@ -55,20 +59,52 @@
     }
   }
 
-  &__rate-price {
+  &__cell--hit {
+    position: relative;
 
-    @media screen and (min-width: $sm) {
-      margin-top: 5px;
-      font-size: 20px;
-    }
+    ::before {
 
-    @media screen and (min-width: $lg) {
-      font-size: 24px;
+      @media screen and (min-width: $sm) {
+        content: url("../img/hit-sm.png");
+        display: block;
+        width: 61px;
+        height: 61px;
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+
+      @media screen and (min-width: $lg) {
+        content: url("../img/hit.png");
+        width: 73px;
+        height: 73px;
+      }
+
     }
   }
 
-}
+  &__rate {
 
-td:first-child {
-  text-align: left;
+      @media screen and (min-width: $sm) {
+        margin-top: 6px;
+        font-weight: 700;
+      }
+
+  }
+
+  &__rate-price {
+
+      @media screen and (min-width: $sm) {
+        font-size: 18px;
+        font-weight: 300;
+        margin-bottom: 8px;
+        margin-top: -3px;
+      }
+
+      @media screen and (min-width: $lg) {
+        font-size: 24px;
+        margin-top: 0;
+      }
+  }
+
 }
