--- a/_assets/scss/components/social.scss
+++ b/_assets/scss/components/social.scss
@@ -9,10 +9,18 @@
     margin-right: 6px;
     margin-left: 6px;
     border-radius: 50%;
-    border: 4px solid #e9ebec;
+    border: 3px solid #e9ebec;
     display: flex;
     align-items: center;
     justify-content: center;
   }
 
+  &__item:hover {
+    border: 3px solid #000000;
+  }
+
+  &__item:active {
+    opacity: 0.7;
+    border: 3px solid #e9ebec;
+  }
 }
