--- a/html/template/head.html
+++ b/html/template/head.html
@@ -2,4 +2,5 @@
     <meta charset="UTF-8">
     <title>{title}</title>
     <link href="css/styles.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
