--- a/_assets/scss/base.scss
+++ b/_assets/scss/base.scss
@@ -19,6 +19,13 @@ body {
   font-weight: 400;
   color: #000000;
   text-transform: none;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.main {
+  flex-grow: 1;
 }
 
 .bold {
