--- a/_assets/scss/icons.scss
+++ b/_assets/scss/icons.scss
@@ -85,3 +85,35 @@
   height:27px;
   width: 32px;
 }
+
+.i-brightness {
+  display: inline-block;
+  background-image: url("../img/icons/i_brightness.png");
+  background-repeat: no-repeat;
+  height:32px;
+  width: 32px;
+}
+
+.i-fill {
+  display: inline-block;
+  background-image: url("../img/icons/i_fill.png");
+  background-repeat: no-repeat;
+  height:43px;
+  width: 48px;
+}
+
+.i-frame {
+  display: inline-block;
+  background-image: url("../img/icons/i_frame.png");
+  background-repeat: no-repeat;
+  height:44px;
+  width: 44px;
+}
+
+.i-heart {
+  display: inline-block;
+  background-image: url("../img/icons/i_heart.png");
+  background-repeat: no-repeat;
+  height: 12px;
+  width: 14px;
+}
