--- a/_assets/scss/components/main-photo.scss
+++ b/_assets/scss/components/main-photo.scss
@@ -1,4 +1,5 @@
 .main-photo {
+    margin-bottom: 20px;
 
     &__img {
         height: 137px;
@@ -9,5 +10,33 @@
         @media screen and (min-width: $sm) {
             height: 505px;
         }
+    }
+
+    &__container {
+        display: flex;
+    }
+
+    &__informer {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 140px;
+        height: 37px;
+        font-size: 12px;
+        line-height: 24px;
+        font-weight: 700;
+        color: #ffffff;
+        text-transform: uppercase;
+        background-color: #d22856;
+        margin-left: auto;
+
+        @media screen and (min-width: $sm) {
+            margin-top: 57px;
+        }
+
+        @media screen and (min-width: $lg) {
+            margin-top: 53px;
+        }
+
     }
 }
