--- a/_assets/scss/components/photo-card.scss
+++ b/_assets/scss/components/photo-card.scss
@@ -1,9 +1,13 @@
 .photo-card {
   font-size: 14px;
   line-height: 24px;
+  height: 100%;
 
   @media screen and (min-width: $sm) {
-  width: 100%;
+    width: 100%;
+    .photo-card__text {
+      width: 100%;
+    }
   }
 
   &__img {
@@ -23,30 +27,90 @@
 
   &__content {
     display: flex;
+    height: calc(100% - 180px);
     flex-direction: column;
     background-color: #f0f0f0;
-    padding-right: 20px;
-    padding-left: 20px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding: 20px;
+    justify-content: space-between;
 
     @media screen and (min-width: $sm) {
-      padding-right: 30px;
-      padding-left: 30px;
-      padding-top: 25px;
-      padding-bottom: 25px;
-      height: 155px;
+      height: calc(100% - 300px);
+      padding: 25px 30px;
     }
 
     @media screen and (min-width: $lg) {
+      height: calc(100% - 400px);
       padding-top: 30px;
       padding-bottom: 30px;
     }
   }
 
+  &__name {
+    font-weight: 700;
+  }
+
+  &__time {
+    font-size: 12px;
+    text-transform: uppercase;
+    font-weight: 400;
+  }
+
+  &__text {
+    margin-top: 0;
+    margin-bottom: 20px;
+  }
+
   &__like {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
     text-transform: uppercase;
     color: #d22856;
     font-size: 12px;
+
+    @media screen and (min-width: $sm) {
+      justify-content: space-between;
+    }
+  }
+
+  &__button {
+    display: flex;
+    padding: 0;
+    margin-right: 20px;
+    border: none;
+    background-color: transparent;
+    order: -1;
+
+    @media screen and (min-width: $sm) {
+      order: 1;
+      margin-right: 0;
+    }
+  }
+
+  &__content--big {
+    display: flex;
+    flex-wrap: wrap;
+
+    @media screen and (min-width: $sm) {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+
+    .photo-card__like {
+      justify-content: flex-start;
+      order: 2;
+
+      @media screen and (min-width: $sm) {
+        order: 0;
+      }
+    }
+
+    .photo-card__button {
+
+      @media screen and (min-width: $sm) {
+        margin-left: 20px;
+      }
+    }
+
   }
 }
