--- a/_assets/scss/components/page-heading.scss
+++ b/_assets/scss/components/page-heading.scss
@@ -8,6 +8,8 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
 
     @media screen and (min-width: $sm) {
       background: url(../img/heading-image-ms.png) center top no-repeat;
