--- a/_assets/scss/components/tabs.scss
+++ b/_assets/scss/components/tabs.scss
@@ -53,10 +53,10 @@
 
   &__content {
     display: flex;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 
     @media screen and (min-width: $sm) {
-      flex-direction: column;
       justify-content: flex-start;
     }
   }
