--- a/_assets/scss/components/tabs.scss
+++ b/_assets/scss/components/tabs.scss
@@ -49,6 +49,10 @@
       margin-left: 0;
       height: 70px;
     }
+
+    &--active {
+
+    }
   }
 
   &__content {
@@ -62,10 +66,11 @@
   }
 
   &__content-item {
-    display: flex;
+    display: none;
     align-items: center;
 
     @media screen and (min-width: $sm) {
+      display: flex;
       border-bottom: 1px solid #dddfe0;
       height: 70px;
       padding-right: 20px;
@@ -75,6 +80,10 @@
     @media screen and (min-width: $lg) {
       padding-right: 30px;
       padding-left: 50px;
+    }
+
+    &--active {
+      display: flex;
     }
   }
 }
