--- a/_assets/scss/components/tabs.scss
+++ b/_assets/scss/components/tabs.scss
@@ -12,6 +12,8 @@
     border-bottom: none;
     flex-direction: row;
     margin-top: 0;
+    margin-bottom: 0;
+    padding-bottom: 0;
     justify-content: center;
   }
 
@@ -49,13 +51,10 @@
       margin-left: 0;
       height: 70px;
     }
-
-    &--active {
-
-    }
   }
 
   &__content {
+    width: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -66,6 +65,7 @@
   }
 
   &__content-item {
+    width: 100%;
     display: none;
     align-items: center;
 
