--- a/_assets/scss/components/graphics-editor.scss
+++ b/_assets/scss/components/graphics-editor.scss
@@ -9,7 +9,7 @@
   @media screen and (min-width: $sm) {
     flex-direction: row;
     padding: 55px 20px;
-    justify-content: center;
+    justify-content: space-around;
   }
 
   @media screen and (min-width: $lg) {
@@ -37,14 +37,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
-    @media screen and (min-width: $sm) {
-      padding-left: 45px;
-    }
-
-    @media screen and (min-width: $lg) {
-      padding-left: 90px;
-    }
   }
 
   &__control {
@@ -59,60 +51,4 @@
       flex-direction: row;
     }
   }
-
-  &__btn-post,
-  &__btn-cancel {
-
-    width: 280px;
-    margin-left: auto;
-    margin-right: auto;
-
-    @media screen and (min-width: $sm) {
-      width: 260px;
-    }
-
-    @media screen and (min-width: $lg) {
-      width: 180px;
-    }
-  }
-
-  &__btn-cancel {
-    border-color: #dddfe0;
-    color: #dddfe0;
-  }
-
-  &__btn-cancel:hover {
-    border-color: #b5b9be;
-    color: #b5b9be;
-  }
-
-  &__btn-cancel:active {
-    background-color: #b5b9be;
-    color: #c8cbcf;
-  }
-
-  &__btn-post {
-    color: #d22856;
-    border-color: #d22856;
-    margin-bottom: 12px;
-
-    @media screen and (min-width: $sm) {
-      margin-bottom: 24px;
-    }
-
-    @media screen and (min-width: $lg) {
-      margin-bottom: 0;
-    }
-  }
-
-  &__btn-post:hover {
-    background-color: #d22856;
-    color: #ffffff;
-  }
-
-  &__btn-post:active {
-    color: #de6183;
-    background-color: #d22856;
-  }
-
 }
