--- a/_assets/scss/components/btn.scss
+++ b/_assets/scss/components/btn.scss
@@ -9,10 +9,11 @@
   line-height: 18px;
   font-weight: 700;
   background-color: transparent;
+  padding: 0;
 }
 
-.btn-post,
-.btn-cancel {
+.btn--post,
+.btn--cancel {
   width: 280px;
   margin-left: auto;
   margin-right: auto;
@@ -26,22 +27,22 @@
   }
 }
 
-.btn-cancel {
+.btn--cancel {
   border-color: #dddfe0;
   color: #dddfe0;
 }
 
-.btn-cancel:hover {
+.btn--cancel:hover {
   border-color: #b5b9be;
   color: #b5b9be;
 }
 
-.btn-cancel:active {
+.btn--cancel:active {
   background-color: #b5b9be;
   color: #c8cbcf;
 }
 
-.btn-post {
+.btn--post {
   color: #d22856;
   border-color: #d22856;
   margin-bottom: 12px;
@@ -56,13 +57,58 @@
   }
 }
 
-.btn-post:hover {
+.btn--post:hover {
   background-color: #d22856;
   color: #ffffff;
 }
 
-.btn-post:active {
+.btn--post:active {
   color: #de6183;
   background-color: #d22856;
 }
 
+.btn--get-app {
+  width: 280px;
+  color: #ffffff;
+  text-decoration: none;
+  margin-bottom: 32px;
+  margin-top: 28px;
+
+  @media screen and (min-width: $sm) {
+    width: 100%;
+    margin-bottom: 47px;
+    margin-top: 0;
+  }
+
+  @media screen and (min-width: $lg) {
+    font-size: 21px;
+    margin-bottom: 67px;
+    margin-top: 0;
+  }
+}
+
+.btn--get-app:hover {
+  color: #d22856;
+  background-color: #ffffff;
+}
+
+.btn--get-app:active {
+  color: rgba(240, 10, 86, 0.7);
+  background-color: #ffffff;
+}
+
+.btn-submit {
+  background-color: #2aab6d;
+  color: #ffffff;
+  text-transform: uppercase;
+  width: 100%;
+  height: 63px;
+  line-height: 30px;
+  border: none;
+  padding: 0;
+  font-weight: 700;
+
+  @media screen and (min-width: $sm) {
+    width: 300px;
+  }
+}
