--- a/_assets/scss/layaut.scss
+++ b/_assets/scss/layaut.scss
@@ -34,13 +34,23 @@ form {
   flex-direction: column;
   align-items: center;
   padding-bottom: 20px;
+  max-width: 280px;
+  margin-left: auto;
+  margin-right: auto;
+
+  @media screen and (min-width: $sm) {
+    max-width: 620px;
+  }
+
+  @media screen and (min-width: $lg) {
+    max-width: 940px;
+  }
 }
 
 .row {
   display: flex;
   flex-direction: column;
   width: 100%;
-
 
   @media screen and (min-width: $lg) {
     flex-direction: row;
